# talent_platform_etl

./: .env  .gitignore  ADD_PERIODIC_TASK_GUIDE.md  AGGRESSIVE_RESET_GUIDE.md  CANAL_CONSUMER_GUIDE.md  DATABASE_SCHEDULER_GUIDE.md  HOT_RELOAD_GUIDE.md  PLUGIN_ENV_GUIDE.md  PURE_CELERY_BEAT_GUIDE.md  SCHEDULER_SUMMARY.md  SCHEDULER_USAGE.md  SIMPLE_DATABASE_SCHEDULER_GUIDE.md  TASK_CANCELLATION_GUIDE.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  config.py  create_tables.py  domain_tree.json  es_import_patent_checkpoint.txt  failed_ids_with_reason.txt  ic_v2.xlsx  ic_v6(1).xlsx  ic_v7(1).xlsx  main.py  pyproject.toml  run_mysql_to_es_workflow.py  start_beat_clean.sh  start_beat_quiet.sh  start_canal_consumer.sh  start_scheduler.sh  test_add_periodic_task.py  test_aggressive_reset.py  test_aggressive_reset_quick.sh  test_database_scheduler.py  test_enabled_reenable_fix.py  test_heap_fix.py  test_pure_celery_beat.py  test_schedule_changes.py  test_simple_scheduler.py  (+5 more)
cache/: teacher_wide_data.pkl  teacher_wide_data_meta.json
db/: database.py  models.py
es/: __init__.py  client.py
es/mappings/: es-record.json  example.json
etl/: operations.py
logger/: log.py
output/: doc_ids_query.sql  pdf_teacher_ids.txt  teacher_ids.txt
plugins/: .env
plugins/data_pipeline/: .env  README.md  __init__.py  (+3 more)
scripts/: 2021年硕士统考拟录名单.xlsx  analyze_ai_profiles.py  analyze_enterprise_count.py  analyze_enterprise_papers_domains.py  analyze_paper_authors.py  async_mysql_patent_to_es.py  async_mysql_raw_teacher_paper_to_es.py  canal_test.py  consumer_main.py  data.xlsx  data.xml  debug_plugin.py  domain_tree_export.py  extract_ids.py  extract_teacher_id.py  fetch_domains.py  fetch_journal_info.py  fetch_papers_from_journals.py  filter_affiliations.py  genpdf.py  ic_v7.xlsx  load_talent_resume_thread.py  load_talent_resume_thread_zip.py  merge_company_papers.py  merge_excel.py  parse_admission_list.py  parse_excel_xml.py  parse_pdf_xml.py  patent_company_test.py  process_domain_excel.py  process_excel.py  process_experience.py  process_linkedin_data.py  producer_main.py  prompt.txt  proxy_test.py  rabbitmq_client.py  search_affiliations.py  search_es_docs.py  sync_intl_teacher_wide_data.py  (+11 more)
services/: __init__.py
(+93 files in other folders)
