[project]
name = "talent-platform-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "canal-python>=0.4",
    "celery>=5.5.3",
    "colorlog>=6.9.0",
    "croniter>=3.0.3",
    "elasticsearch==8.15.1",
    "lxml>=6.0.2",
    "minio>=7.2.16",
    "openai>=1.99.9",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pdfminer-six>=20250506",
    "pika>=1.3.2",
    "protobuf==3.13.0",
    "pyhumps>=3.8.0",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "sqlmodel>=0.0.24",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/talent_platform"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pysocks>=1.7.1",
    "ruff>=0.12.0",
]
